# noma_maintenance

./: .behavior_test  .behavior_tests  .gitignore
backend/: .gitignore  Cargo.toml  example_setup_db.sh
backend/migrations/: 0001_setup.sql
backend/src/: auth.rs  error.rs  gcs.rs  labeling.rs  main.rs  maintenance.rs  proposals.rs  service_worksheets.rs  shift_reports.rs  shifts.rs  state.rs  storage.rs  sync.rs  typst_render.rs
backend/src/tests/: admin_smoke.rs  auth_dev_login.rs  auth_session.rs  helpers.rs  idempotency.rs  idempotency_replay.rs  labeling_assign_barcode.rs  labeling_building_cache.rs  labeling_correct_barcode.rs  labeling_create_device.rs  labeling_create_location.rs  labeling_device_photo.rs  labeling_update_device_details.rs  maintenance_authorization.rs  maintenance_persistence.rs  maintenance_photos.rs  maintenance_validation.rs  mod.rs  roles.rs  setup.rs  shift_cancellation.rs  shift_closing.rs  shift_creation.rs  shift_participants.rs  shift_queries.rs  shift_readiness.rs  shift_signature.rs  sse_hub.rs  tenancy.rs  triggers.rs
database/: dev_data.sql  device_data.csv  device_data.sql  kalman_tomb_barcodes.sql  migrate_remove_accepted_state.sql  prod_setup.sql  prod_to_setup.sql  reset_prod.sql  setup.sql
dev/: 0_shared_sync_core.md  1_shift_skeleton.md  backend_behavior.md  backend_test_plan.md  dev_notes.md  dev_roadmap.md  e2e_test_plan.md  feature_catalog.md  multi_tenant_readiness.md  security_audit.md  test_implementation_notes.md  test_plan.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  (+1 more)
(+170 files in other folders)
