[package]
name = "noma_maintenance"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
axum-macros = "0.5.0"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
log = "0.4.29"
reqwest = { version = "0.12.8", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
simple_logger = "5.1.0"
sqlx = { version = "0.8.6", default-features = false, features = ["postgres", "runtime-tokio-rustls", "macros", "chrono", "uuid"] }
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "fs", "set-header"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
